ctowasm/test/samples/error/redefined_tags_prob.c
// Redefinition of struct or enum tags
int main() {
  enum X;
  struct X { int x; };
}